--- a/frontend3/src/index.html
+++ b/frontend3/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Parcel App</title>
     <link href="./index.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.jsx"></script>
   </body>
 </html>
